fixed navbar text alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -146,6 +146,9 @@
    font-style: normal;
    line-height: 1.5rem;
    display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
  }
 
  .navLink :hover {
